fix(*): hide scrollbar

--- a/src/app/(main)/layout-styles.module.scss
+++ b/src/app/(main)/layout-styles.module.scss
@@ -28,12 +28,15 @@
     height: calc(100% - 24px);
 
     & > :first-child {
-        overflow: scroll;
+        overflow-y: scroll;
         height: calc(100% - 80px - 12px);
         border-radius: 12px;
         background: #000;
         padding: 16px 8px;
         margin-bottom: 12px;
+
+        -ms-overflow-style: none;
+         scrollbar-width: none;
 
         
         @media screen and (max-width: 700px) {
